[package]
name = "kaspulse"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2", features = ["json", "tls"] }
serde_json = "1"
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
blake2b_simd = "1"
anyhow = "1"
hex = "0.4"
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# on-chain publishing + consumer (the `onchain` bin) — heavy Kaspa tx stack,
# optional so `oracle` and `verify` build in seconds.
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "98a4ccd8d200853787f227bd4536ac540cf34957", optional = true }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "98a4ccd8d200853787f227bd4536ac540cf34957", optional = true }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "98a4ccd8d200853787f227bd4536ac540cf34957", optional = true }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "98a4ccd8d200853787f227bd4536ac540cf34957", optional = true }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "98a4ccd8d200853787f227bd4536ac540cf34957", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }

[features]
# build the on-chain bin with:  cargo run --bin onchain --features onchain
onchain = ["kaspa-wrpc-client", "kaspa-rpc-core", "kaspa-consensus-core", "kaspa-txscript", "kaspa-addresses", "tokio"]

[[bin]]
name = "oracle"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"

[[bin]]
name = "onchain"
path = "src/onchain.rs"
required-features = ["onchain"]

[profile.release]
opt-level = 2

[[bin]]
name = "wsspike"
path = "src/wsspike.rs"

[[bin]]
name = "latency"
path = "src/latency.rs"
required-features = ["onchain"]

[[bin]]
name = "slash"
path = "src/slash.rs"
required-features = ["onchain"]

[[bin]]
name = "slash_live"
path = "src/slash_live.rs"
required-features = ["onchain"]


[[bin]]
name = "consumer_live"
path = "src/consumer_live.rs"
required-features = ["onchain"]
