[package]
name = "kaspulse-sdk"
version = "0.1.0"
edition = "2021"
description = "Consume the kaspulse oracle — verify signed prices off-chain + build price-gated Kaspa covenants."

[dependencies]
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secp256k1 = { version = "0.29", features = ["global-context"] }
blake2b_simd = "1"
hex = "0.4"
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "98a4ccd8d200853787f227bd4536ac540cf34957", optional = true }

[features]
# covenant builders (needs the Kaspa script engine). off-chain verify works without it.
covenant = ["kaspa-txscript"]

[[example]]
name = "verify_and_gate"
